using Domain.Common;

namespace Domain.Entities.Access
{
    public class AccessRole : BaseEntity
    {
        public string Name { get; set; } = string.Empty;
        public string Description { get; set; } = string.Empty;
        public bool IsActive { get; set; } = true;
    }
}
